the navbar is designed

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/public/styles.css" />
+    <link rel="stylesheet" href="/dist/Css/styles.css" />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/
+font-awesome/5.15.2/css/all.min.css"
+    />
+    <script src="./script.js" defer></script>
     <title>Text Reader</title>
   </head>
   <body>
-    <h1 class="bg-black">Hello world</h1>
+    <div class="wrapper">
+      <nav class="navbar" data-navbar>
+        <a class="logo-el" data-logo>
+          <img
+            src="./images/Nazari.png"
+            alt="logo"
+            width="100px"
+            class="logo"
+          />
+        </a>
+        <ul class="nav" data-nav>
+          <li class="nav-el"><a href="/public/index.html">Home</a></li>
+          <li class="nav-el"><a href="/public/index.html">About</a></li>
+          <li class="nav-el"><a href="/public/index.html">Source Code</a></li>
+          <li class="nav-el"><a href="/public/index.html">Nazari-web</a></li>
+          <li><input type="checkbox" name="control" id="contorl" /></li>
+        </ul>
+      </nav>
+      <li class="burger">
+        <i class="fas fa-align-justify" data-toggle></i>
+      </li>
+    </div>
   </body>
 </html>
+<i class="fas fa-hamburger"></i>
