--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,10 @@ font-awesome/5.15.2/css/all.min.css"
           <li class="nav-el"><a href="/public/index.html">About</a></li>
           <li class="nav-el"><a href="/public/index.html">Source Code</a></li>
           <li class="nav-el"><a href="/public/index.html">Nazari-web</a></li>
-          <li><input type="checkbox" name="control" id="contorl" /></li>
+          <li class="close">X</li>
+          <li class="control">
+            <input type="checkbox" name="control" id="contorl" />
+          </li>
         </ul>
       </nav>
       <li class="burger">
