toggle menu added

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,8 @@ font-awesome/5.15.2/css/all.min.css"
           <li class="nav-el"><a href="/public/index.html">Nazari-web</a></li>
           <li class="close">X</li>
           <li class="control">
-            <input type="checkbox" name="control" id="contorl" />
+            <i class="fas fa-sun" id="sun"></i
+            ><i class="fas fa-cloud-moon" id="moon"></i>
           </li>
         </ul>
       </nav>
@@ -40,6 +41,11 @@ font-awesome/5.15.2/css/all.min.css"
         <i class="fas fa-align-justify" data-toggle></i>
       </li>
     </div>
+    <div style="color: black">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+      sapiente quae provident impedit suscipit aperiam fuga consequuntur
+      aspernatur consectetur ex, at quas similique iure! Laudantium quos optio
+      velit quod natus.
+    </div>
   </body>
 </html>
-<i class="fas fa-hamburger"></i>
