text reader markup added

--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,17 @@ font-awesome/5.15.2/css/all.min.css"
         <i class="fas fa-align-justify" data-toggle></i>
       </li>
     </div>
-    <div style="color: black">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-      sapiente quae provident impedit suscipit aperiam fuga consequuntur
-      aspernatur consectetur ex, at quas similique iure! Laudantium quos optio
-      velit quod natus.
+    <div class="textReader">
+      <textarea
+        name="text"
+        id="textplace"
+        placeholder="past your text here"
+      ></textarea>
+      <div class="buttons">
+        <button>Play</button>
+        <button>Pause</button>
+        <button>Stop</button>
+      </div>
     </div>
   </body>
 </html>
