responsive layout updated

--- a/public/index.html
+++ b/public/index.html
@@ -48,16 +48,18 @@ font-awesome/5.15.2/css/all.min.css"
         placeholder="past your text here"
       ></textarea>
       <div class="buttons">
-        <label for="speed">Speed</label>
-        <input
-          type="number"
-          name="speed"
-          id="speed"
-          min="0.5"
-          max="2"
-          value="1"
-          step="0.5"
-        />
+        <div class="inputCont">
+          <label for="speed">Speed</label>
+          <input
+            type="number"
+            name="speed"
+            id="speed"
+            min="0.5"
+            max="2"
+            value="1"
+            step="0.5"
+          />
+        </div>
         <button id="play">Play</button>
         <button id="pause">Pause</button>
         <button id="stop">Stop</button>
