--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/dist/Css/styles.css" />
+    <link rel="stylesheet" href="/public/styles.css " />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -27,9 +27,9 @@ font-awesome/5.15.2/css/all.min.css"
         </a>
         <ul class="nav" data-nav>
           <li class="nav-el"><a href="/public/index.html">Home</a></li>
-          <li class="nav-el"><a href="/public/index.html">About</a></li>
-          <li class="nav-el"><a href="/public/index.html">Source Code</a></li>
-          <li class="nav-el"><a href="/public/index.html">Nazari-web</a></li>
+          <li class="nav-el"><a href="#about">About</a></li>
+          <li class="nav-el"><a href="https://github.com/abdullah-2021-D/Text-Reader.git" target="_blank">Source Code</a></li>
+          <li class="nav-el"><a href="https://abdullah-nazari.netlify.app/" target="_blank">Nazari</a></li>
           <li class="close">X</li>
           <li class="control">
             <i class="fas fa-sun" id="sun"></i
@@ -64,6 +64,19 @@ font-awesome/5.15.2/css/all.min.css"
         <button id="pause">Pause</button>
         <button id="stop">Stop</button>
       </div>
+    </div>
+    <div id="about">
+      <h2>The Text Reader Assistant</h2>
+      <p>
+        If you are someone like me who doesn't like to waste time on a boring thing like reading essays or if you like to multitask, then this app is for you.</br> You can simply past your essay or any text inside the text box and press play So the handsome JavaScript take care of reading the text for you.
+      </p>
+      <p>
+        You can also easily change the speed of reading to your choice and can pause it at any place so later by pressing play it will continue from where you stopped.
+
+      </p>
+      <p>
+        If those were not cool enough, wait for the update where I will add the functionality of smart writing assistant, (You talk, and It will write) Sounds fun to me. 😉 
+      </p>
     </div>
   </body>
 </html>
