--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Text Reader is a simple friendly tool to help you with reading essays">
+    <meta name="keywords" content="textReader text-reader essay-reader">
     <link rel="stylesheet" href="/public/styles.css " />
+    
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
